# jenkins-to-github-notify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  README.md  README.rst  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg
.github/workflows/: deploy.yml  docker.yml  tests.yml
src/jenkins_to_github_notify/: app.py  notify.py
tests/: test_jenkins_to_github_notify.py
tests/test_jenkins_to_github_notify/: jenkins-response-1.json  jenkins-response-2.json  jenkins-response-3.json  jenkins-response-4.json  jenkins-response-no-build-data.json  job-multiple-repos.xml  job-single-repo.xml
