[metadata]
name = jenkins-to-github-notify
description = Notify build status using a Jenkins Webhook
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ESSS/jenkins-to-github-notify
author = ESSS
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest, ci, jenkins, github

[options]
packages =
    jenkins_to_github_notify
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
